--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:theme="@style/Theme.CoreChatOperationConfigApp"
         android:usesCleartextTraffic="true">
 
+        <activity android:name=".activity.LoginActivity"/>
+        <activity android:name=".activity.HomeActivity"/>
+        <activity android:name=".activity.DashboardTabConfigActivity"/>
         <activity android:name=".activity.ChatConversationBarConfigActivity"/>
         <activity android:name=".activity.ChatCardViewConfigActivity" />
         <activity android:name=".activity.ChatButtonConfigActivity" />
