--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,10 @@
         <activity android:name=".activity.BottomMenuConfigActivity" />
         <activity android:name=".activity.IconsConfigActivity" />
         <activity android:name=".activity.SplashPreviewActivity" />
-        <activity android:name=".activity.SplashConfigActivity">
+        <activity android:name=".activity.SplashConfigActivity"/>
+        <activity android:name=".activity.LiveChatActivity"/>
+        <activity android:name=".activity.WaitingActivity"/>
+        <activity android:name=".activity.SettingConfigActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
