--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 16 15:58:20 IST 2022
-sdk.dir=C\:\\Users\\admin\\AppData\\Local\\Android\\Sdk
+#Wed Mar 16 16:46:29 IST 2022
+sdk.dir=/Users/meetbhatt/Library/Android/sdk
